## Process this file with automake to produce Makefile.in
#
# src/lib/datahandler/Makefile.am
#
# $Id: Makefile.am 581 2006-12-12 09:33:21Z erikg $
#

datahandlerdir		= $(pyexecdir)/revelation/datahandler
datahandler_PYTHON	= \
	__init__.py \
	base.py \
	fpm.py \
	gpass.py \
	netrc.py \
	pwsafe.py \
	rvl.py \
	splashid.py \
	text.py \
	xhtml.py

